--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Clone OLX",
-  "name": "Clone App OLX",
+  "name": "Clone OLX",
   "icons": [
     {
       "src": "favicon.ico",
